--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -71,9 +71,12 @@ setw -g automatic-rename on
 set -g renumber-windows on
 
 # Copy and Paste Mode
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-bind-key -T copy-mode-vi C-c send-keys -X cancel
+setw -g mode-keys vi
+unbind -T copy-mode-vi y
+bind   -T copy-mode-vi v send -X begin-selection
+bind   -T copy-mode-vi y send -X copy-pipe-and-cancel "$HOME/bin/tmux-copy"
+bind   -T copy-mode-vi C-c send -X cancel
+
 bind-key p paste-buffer
 bind-key P choose-buffer
 bind-key b list-buffers
