[feat] Add tmux and lua characteristics

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,6 +58,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Crear una nueva sesión con Ctrl+b + C
+bind-key C new-session
+
 # Resize Panes
 bind -r < resize-pane -L 2
 bind -r > resize-pane -R 2
